// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with JSX 1`] = `
<div
  class="application theme--light"
  data-app="true"
  id="app"
>
  <div
    class="application--wrap"
  >
    <main
      class="v-content"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <button
          class="v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
  
  With JSX
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Button with some emoji 1`] = `
<div
  class="application theme--light"
  data-app="true"
  id="app"
>
  <div
    class="application--wrap"
  >
    <main
      class="v-content"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <button
          class="v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
  
  😀 😎 👍 💯
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Button with text 1`] = `
<div
  class="application theme--light"
  data-app="true"
  id="app"
>
  <div
    class="application--wrap"
  >
    <main
      class="v-content"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <button
          class="v-btn v-btn--disabled theme--light"
          disabled="disabled"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
  Hello Storybook
  Hello Storybook
          </div>
        </button>
      </div>
    </main>
  </div>
</div>
`;
